src/grammar/GeneruseParser.java
// Generated from Generuse.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GeneruseParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LT=30, FORMULA=52, RC=7, ACTOR_WORD=64, RB=3, RP=5, MOD=22, LETTER=45, 
		GTE=31, LP=4, DIRECTIVE_NAME_WS=47, DO=57, EQUALS=25, FLOAT=41, NOT=28, 
		AND=26, LTE=32, ACTION=50, CONTEXT=51, WORD=42, AS=15, IMPORT=53, ACTOR_RB=66, 
		COMMA=44, IS=34, WAS=35, PLUS=23, DIGIT=46, COMMENT=1, BEFORE_DIRECTIVE=61, 
		STATE=49, AFTER_DIRECTIVE=62, ACTOR_SEP=63, PERIOD=8, MEMBER_SEP=9, BEFORE=12, 
		HAVING=11, INT=39, MINUS=24, BE=14, AFTER=13, GIVING=10, MUL=21, TRUE=18, 
		SEMI=17, MUST=36, PREPOSITION=38, COLON=16, GROUP=55, NEEDS=54, NEQ=33, 
		WS=43, USECASE=48, PRECONDITION=59, OR=27, ACTOR_WS=65, BRANCH=56, LC=6, 
		GT=29, LB=2, DIV=20, FALSE=19, DATA=58, ARTICLE=37, STRING=40, ACTORS=60;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "'['", "RB", "'('", "')'", "'{'", "'}'", "'.'", 
		"''s'", "'giving'", "'having'", "BEFORE", "AFTER", "'be'", "'as'", "':'", 
		"';'", "'true'", "'false'", "'/'", "'*'", "'mod'", "'+'", "'-'", "'='", 
		"'and'", "'or'", "'not'", "'>'", "'<'", "'>='", "'<='", "'not='", "'is'", 
		"'was'", "'must'", "ARTICLE", "PREPOSITION", "INT", "STRING", "FLOAT", 
		"WORD", "WS", "','", "LETTER", "DIGIT", "DIRECTIVE_NAME_WS", "'usecase'", 
		"'state'", "'action'", "'context'", "'formula'", "'import'", "'needs'", 
		"'group'", "'branch'", "'do'", "'data'", "'pre-condition'", "'actors'", 
		"BEFORE_DIRECTIVE", "AFTER_DIRECTIVE", "ACTOR_SEP", "ACTOR_WORD", "ACTOR_WS", 
		"ACTOR_RB"
	};
	public static final int
		RULE_gss = 0, RULE_groupSpec = 1, RULE_importSpec = 2, RULE_usecase = 3, 
		RULE_usecased = 4, RULE_state = 5, RULE_action = 6, RULE_formula = 7, 
		RULE_data = 8, RULE_usecaseHeader = 9, RULE_usecasedHeader = 10, RULE_stateHeader = 11, 
		RULE_actionHeader = 12, RULE_formulaHeader = 13, RULE_dataHeader = 14, 
		RULE_stateSpec = 15, RULE_formalParams = 16, RULE_conj = 17, RULE_auxVerb = 18, 
		RULE_id = 19, RULE_actorId = 20, RULE_objectSpec = 21, RULE_instantSpec = 22, 
		RULE_usecaseId = 23, RULE_contextSpec = 24, RULE_attributeValue = 25, 
		RULE_actorSpec = 26, RULE_preconditionSpec = 27, RULE_doSpec = 28, RULE_command = 29, 
		RULE_branchSpec = 30, RULE_sentence = 31, RULE_objRefEx = 32, RULE_expr = 33, 
		RULE_literal = 34, RULE_stmt = 35, RULE_actionId = 36, RULE_actionSuffix = 37, 
		RULE_resultId = 38, RULE_pastSpec = 39, RULE_timeSpec = 40, RULE_noteSpec = 41, 
		RULE_notePrefix = 42, RULE_noteSuffix = 43, RULE_multiParamSpec = 44, 
		RULE_autoParam = 45, RULE_paramName = 46, RULE_objRef = 47, RULE_objField = 48;
	public static final String[] ruleNames = {
		"gss", "groupSpec", "importSpec", "usecase", "usecased", "state", "action", 
		"formula", "data", "usecaseHeader", "usecasedHeader", "stateHeader", "actionHeader", 
		"formulaHeader", "dataHeader", "stateSpec", "formalParams", "conj", "auxVerb", 
		"id", "actorId", "objectSpec", "instantSpec", "usecaseId", "contextSpec", 
		"attributeValue", "actorSpec", "preconditionSpec", "doSpec", "command", 
		"branchSpec", "sentence", "objRefEx", "expr", "literal", "stmt", "actionId", 
		"actionSuffix", "resultId", "pastSpec", "timeSpec", "noteSpec", "notePrefix", 
		"noteSuffix", "multiParamSpec", "autoParam", "paramName", "objRef", "objField"
	};

	@Override
	public String getGrammarFileName() { return "Generuse.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeneruseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GssContext extends ParserRuleContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public UsecaseContext usecase(int i) {
			return getRuleContext(UsecaseContext.class,i);
		}
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public List<UsecasedContext> usecased() {
			return getRuleContexts(UsecasedContext.class);
		}
		public UsecasedContext usecased(int i) {
			return getRuleContext(UsecasedContext.class,i);
		}
		public List<ImportSpecContext> importSpec() {
			return getRuleContexts(ImportSpecContext.class);
		}
		public List<UsecaseContext> usecase() {
			return getRuleContexts(UsecaseContext.class);
		}
		public ImportSpecContext importSpec(int i) {
			return getRuleContext(ImportSpecContext.class,i);
		}
		public GssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gss; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterGss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitGss(this);
		}
	}

	public final GssContext gss() throws RecognitionException {
		GssContext _localctx = new GssContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gss);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98); groupSpec();
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(99); importSpec();
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LB) {
				{
				setState(111);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(105); usecase();
					}
					break;

				case 2:
					{
					setState(106); usecased();
					}
					break;

				case 3:
					{
					setState(107); state();
					}
					break;

				case 4:
					{
					setState(108); action();
					}
					break;

				case 5:
					{
					setState(109); formula();
					}
					break;

				case 6:
					{
					setState(110); data();
					}
					break;
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupSpecContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LB() { return getToken(GeneruseParser.LB, 0); }
		public TerminalNode RB() { return getToken(GeneruseParser.RB, 0); }
		public TerminalNode GROUP() { return getToken(GeneruseParser.GROUP, 0); }
		public GroupSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterGroupSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitGroupSpec(this);
		}
	}

	public final GroupSpecContext groupSpec() throws RecognitionException {
		GroupSpecContext _localctx = new GroupSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_groupSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(LB);
			setState(117); match(GROUP);
			setState(118); id();
			setState(119); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportSpecContext extends ParserRuleContext {
		public AttributeValueContext attributeValue(int i) {
			return getRuleContext(AttributeValueContext.class,i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LB() { return getToken(GeneruseParser.LB, 0); }
		public List<AttributeValueContext> attributeValue() {
			return getRuleContexts(AttributeValueContext.class);
		}
		public TerminalNode IMPORT() { return getToken(GeneruseParser.IMPORT, 0); }
		public TerminalNode RB() { return getToken(GeneruseParser.RB, 0); }
		public ImportSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterImportSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitImportSpec(this);
		}
	}

	public final ImportSpecContext importSpec() throws RecognitionException {
		ImportSpecContext _localctx = new ImportSpecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(LB);
			setState(122); match(IMPORT);
			setState(123); id();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(124); attributeValue();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public PreconditionSpecContext preconditionSpec() {
			return getRuleContext(PreconditionSpecContext.class,0);
		}
		public UsecaseHeaderContext usecaseHeader() {
			return getRuleContext(UsecaseHeaderContext.class,0);
		}
		public ActorSpecContext actorSpec() {
			return getRuleContext(ActorSpecContext.class,0);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public UsecaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterUsecase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitUsecase(this);
		}
	}

	public final UsecaseContext usecase() throws RecognitionException {
		UsecaseContext _localctx = new UsecaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usecase);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132); usecaseHeader();
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(133); preconditionSpec();
				}
				break;
			}
			setState(136); actorSpec();
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(137); command();
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecasedContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public ActorSpecContext actorSpec() {
			return getRuleContext(ActorSpecContext.class,0);
		}
		public UsecasedHeaderContext usecasedHeader() {
			return getRuleContext(UsecasedHeaderContext.class,0);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public UsecasedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecased; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterUsecased(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitUsecased(this);
		}
	}

	public final UsecasedContext usecased() throws RecognitionException {
		UsecasedContext _localctx = new UsecasedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_usecased);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143); usecasedHeader();
			setState(144); actorSpec();
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(145); command();
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public StateHeaderContext stateHeader() {
			return getRuleContext(StateHeaderContext.class,0);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public InstantSpecContext instantSpec(int i) {
			return getRuleContext(InstantSpecContext.class,i);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<InstantSpecContext> instantSpec() {
			return getRuleContexts(InstantSpecContext.class);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitState(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); stateHeader();
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152); instantSpec();
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LB );
			setState(158); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(157); sentence();
				}
				}
				setState(160); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << PERIOD) | (1L << TRUE) | (1L << FALSE) | (1L << MINUS) | (1L << NOT) | (1L << ARTICLE) | (1L << INT) | (1L << STRING) | (1L << FLOAT) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ActionHeaderContext actionHeader() {
			return getRuleContext(ActionHeaderContext.class,0);
		}
		public ObjectSpecContext objectSpec() {
			return getRuleContext(ObjectSpecContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); actionHeader();
			setState(163); objectSpec();
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164); sentence();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << PERIOD) | (1L << TRUE) | (1L << FALSE) | (1L << MINUS) | (1L << NOT) | (1L << ARTICLE) | (1L << INT) | (1L << STRING) | (1L << FLOAT) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public FormulaHeaderContext formulaHeader() {
			return getRuleContext(FormulaHeaderContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formula);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); formulaHeader();
			setState(171); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(170); sentence();
				}
				}
				setState(173); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << PERIOD) | (1L << TRUE) | (1L << FALSE) | (1L << MINUS) | (1L << NOT) | (1L << ARTICLE) | (1L << INT) | (1L << STRING) | (1L << FLOAT) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public DataHeaderContext dataHeader() {
			return getRuleContext(DataHeaderContext.class,0);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); dataHeader();
			setState(177); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(176); sentence();
				}
				}
				setState(179); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << PERIOD) | (1L << TRUE) | (1L << FALSE) | (1L << MINUS) | (1L << NOT) | (1L << ARTICLE) | (1L << INT) | (1L << STRING) | (1L << FLOAT) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseHeaderContext extends ParserRuleContext {
		public AttributeValueContext attributeValue(int i) {
			return getRuleContext(AttributeValueContext.class,i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LB() { return getToken(GeneruseParser.LB, 0); }
		public List<AttributeValueContext> attributeValue() {
			return getRuleContexts(AttributeValueContext.class);
		}
		public TerminalNode HAVING() { return getToken(GeneruseParser.HAVING, 0); }
		public TerminalNode USECASE() { return getToken(GeneruseParser.USECASE, 0); }
		public TerminalNode RB() { return getToken(GeneruseParser.RB, 0); }
		public UsecaseHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterUsecaseHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitUsecaseHeader(this);
		}
	}

	public final UsecaseHeaderContext usecaseHeader() throws RecognitionException {
		UsecaseHeaderContext _localctx = new UsecaseHeaderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_usecaseHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); match(LB);
			setState(182); match(USECASE);
			setState(183); id();
			setState(190);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(184); match(HAVING);
				setState(186); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(185); attributeValue();
					}
					}
					setState(188); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WORD );
				}
			}

			setState(192); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecasedHeaderContext extends ParserRuleContext {
		public AttributeValueContext attributeValue(int i) {
			return getRuleContext(AttributeValueContext.class,i);
		}
		public FormalParamsContext formalParams() {
			return getRuleContext(FormalParamsContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LB() { return getToken(GeneruseParser.LB, 0); }
		public List<AttributeValueContext> attributeValue() {
			return getRuleContexts(AttributeValueContext.class);
		}
		public TerminalNode HAVING() { return getToken(GeneruseParser.HAVING, 0); }
		public TerminalNode USECASE() { return getToken(GeneruseParser.USECASE, 0); }
		public TerminalNode RB() { return getToken(GeneruseParser.RB, 0); }
		public TerminalNode MINUS() { return getToken(GeneruseParser.MINUS, 0); }
		public UsecasedHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecasedHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterUsecasedHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitUsecasedHeader(this);
		}
	}

	public final UsecasedHeaderContext usecasedHeader() throws RecognitionException {
		UsecasedHeaderContext _localctx = new UsecasedHeaderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_usecasedHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194); match(LB);
			setState(195); match(USECASE);
			setState(196); id();
			setState(199);
			switch (_input.LA(1)) {
			case MINUS:
				{
				setState(197); match(MINUS);
				}
				break;
			case PREPOSITION:
				{
				setState(198); formalParams();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(207);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(201); match(HAVING);
				setState(203); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(202); attributeValue();
					}
					}
					setState(205); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WORD );
				}
			}

			setState(209); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateHeaderContext extends ParserRuleContext {
		public AttributeValueContext attributeValue(int i) {
			return getRuleContext(AttributeValueContext.class,i);
		}
		public TerminalNode LB() { return getToken(GeneruseParser.LB, 0); }
		public List<AttributeValueContext> attributeValue() {
			return getRuleContexts(AttributeValueContext.class);
		}
		public TerminalNode STATE() { return getToken(GeneruseParser.STATE, 0); }
		public TerminalNode HAVING() { return getToken(GeneruseParser.HAVING, 0); }
		public TerminalNode RB() { return getToken(GeneruseParser.RB, 0); }
		public StateSpecContext stateSpec() {
			return getRuleContext(StateSpecContext.class,0);
		}
		public StateHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).enterStateHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneruseListener ) ((GeneruseListener)listener).exitStateHeader(this);
		}
	}
